<resources>
    <string name="app_name">Android Developer Test</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="sign_in_with_google">Sign In with Google</string>
    <string name="content_image_desc">content_image</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="text_job_list">JOB LIST</string>
    <string name="text_search">Search</string>
    <string name="text_fulltime">Fulltime</string>
    <string name="text_location">Location</string>
    <string name="text_type_location">type location</string>
    <string name="text_apply_filter">Apply Filter</string>
    <string name="title">Title</string>
    <string name="desc">Description</string>
    <string name="location">Location</string>
    <string name="text_null_object">Null object</string>
    <string name="text_job_detail">JOB DETAIL</string>
    <string name="text_company">Company</string>
    <string name="text_job_specification">Job Spesification</string>
    <string name="text_go_to_web">Go to website</string>
</resources>