<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/item_card_job"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/size_12dp"
        android:layout_margin="@dimen/size_20dp"
        style="@style/card_clickable"
        >

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="@dimen/size_12dp">

            <ImageView
                android:id="@+id/img_company"
                android:layout_width="@dimen/size_100dp"
                android:layout_height="@dimen/size_100dp"
                android:layout_marginEnd="@dimen/size_20dp"
                android:scaleType="fitCenter"
                android:contentDescription="@string/content_image_desc" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/text_first"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title"
                    android:textStyle="bold"
                    android:textSize="@dimen/size_16sp"
                    android:maxLines="1"
                    android:ellipsize="end"/>

                <TextView
                    android:id="@+id/text_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/desc"
                    android:textSize="@dimen/size_14sp"
                    android:layout_marginBottom="@dimen/size_8dp"/>

                <TextView
                    android:id="@+id/text_third"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location"
                    android:textSize="@dimen/size_14sp"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</layout>