<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layout_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginStart="@dimen/size_20dp"
            android:layout_marginEnd="@dimen/size_20dp">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/card_grey_radius_20dp"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:paddingStart="@dimen/size_8dp"
                    android:paddingEnd="@dimen/size_8dp"
                    android:paddingTop="@dimen/size_12dp"
                    android:paddingBottom="@dimen/size_12dp"
                    >
                    <ImageView
                        android:layout_width="@dimen/size_24dp"
                        android:layout_height="@dimen/size_24dp"
                        android:src="@drawable/ic_search"
                        android:layout_marginEnd="@dimen/size_12dp"/>

                    <EditText
                        android:id="@+id/et_search"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textShortMessage"
                        android:imeOptions="actionDone"
                        android:maxLines="1"
                        android:hint="@string/text_search"
                        android:background="@android:color/transparent"
                        android:importantForAutofill="no" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <ImageView
                android:id="@+id/btn_filter"
                android:layout_width="@dimen/size_24dp"
                android:layout_height="@dimen/size_24dp"
                android:layout_marginStart="@dimen/size_20dp"
                style="@style/view_clickable_borderless"
                android:src="@drawable/ic_arrow_down"
                android:contentDescription="@string/content_image_desc" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_filter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/size_8dp"
            android:layout_marginTop="@dimen/size_12dp"
            android:background="@color/grey"
            android:visibility="gone"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/text_fulltime"
                    android:textSize="@dimen/size_16sp"
                    android:layout_weight="1"
                    />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/button_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_location"
                    android:textSize="@dimen/size_16sp"
                    android:layout_weight="1"
                    />

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="@dimen/size_20dp"
                    app:cardBackgroundColor="@color/grey_two"
                    app:cardElevation="0dp"
                    android:layout_weight="1"
                    >

                    <EditText
                        android:id="@+id/et_location"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textShortMessage"
                        android:maxLines="1"
                        android:hint="@string/text_type_location"
                        android:paddingStart="@dimen/size_12dp"
                        android:paddingEnd="@dimen/size_12dp"
                        android:paddingTop="@dimen/size_5dp"
                        android:paddingBottom="@dimen/size_5dp"
                        android:background="@android:color/transparent"
                        android:importantForAutofill="no" />

                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_apply_filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_apply_filter"
                app:cornerRadius="@dimen/size_20dp"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/size_8dp"/>

        </LinearLayout>

    </LinearLayout>

</layout>
