<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/size_12dp"
        android:layout_margin="@dimen/size_20dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textSize="@dimen/size_16sp"
                android:layout_marginBottom="@dimen/size_8dp"/>

            <TextView
                android:id="@+id/text_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textSize="@dimen/size_16sp"
                android:textColor="@color/black"
                android:layout_marginBottom="@dimen/size_20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_fulltime"
                android:textSize="@dimen/size_16sp"
                android:layout_marginBottom="@dimen/size_8dp"/>

            <TextView
                android:id="@+id/text_fulltime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_fulltime"
                android:textSize="@dimen/size_16sp"
                android:textColor="@color/black"
                android:layout_marginBottom="@dimen/size_20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/desc"
                android:textSize="@dimen/size_16sp"
                android:layout_marginBottom="@dimen/size_8dp"/>

            <TextView
                android:id="@+id/text_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/desc"
                android:textSize="@dimen/size_16sp"
                android:textColor="@color/black"
                android:layout_marginBottom="@dimen/size_20dp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</layout>