<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.detail.DetailActivity"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:id="@+id/top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_job_detail"
                style="@style/text_black_bold_18sp"
                android:layout_marginTop="@dimen/size_20dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="@dimen/size_24dp"
                android:layout_height="@dimen/size_24dp"
                android:layout_marginStart="@dimen/size_20dp"
                android:src="@drawable/ic_arrow_left"
                style="@style/view_clickable_borderless"
                app:layout_constraintTop_toTopOf="@id/top"
                app:layout_constraintBottom_toBottomOf="@id/top"
                app:layout_constraintStart_toStartOf="parent"
                android:contentDescription="@string/content_image_desc" />

            <TextView
                android:id="@+id/company"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_20dp"
                android:text="@string/text_company"
                android:textSize="@dimen/size_18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/btn_back"
                app:layout_constraintTop_toBottomOf="@id/btn_back" />

            <FrameLayout
                android:id="@+id/layout_top"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/company"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                >
                <include
                    android:id="@+id/item_layout_job_list"
                    layout="@layout/item_layout_job_list"
                    />

            </FrameLayout>

            <TextView
                android:id="@+id/specification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_20dp"
                android:text="@string/text_job_specification"
                android:textSize="@dimen/size_18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/btn_back"
                app:layout_constraintTop_toBottomOf="@id/layout_top" />

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/specification"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                >
                <include
                    android:id="@+id/layout_specification"
                    layout="@layout/layout_specification"/>
            </FrameLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</layout>
